--- a/Unit 3/Unit3.html
+++ b/Unit 3/Unit3.html
@@ -28,6 +28,7 @@ body {
 
 <h1 id="unit-3---tidyverse">Unit 3 - Tidyverse</h1>
 <p>Maciej Kilijański</p>
+<p>Slides <a href="./unit_3_tidyverse.pdf">here</a></p>
 <h1 id="crisp-dm-data-science-workflow">CRISP-DM data science workflow</h1>
 <blockquote>
 <p>Cross-industry standard process for data mining (CRISP-DM)</p>
